--- a/src/index.ejs
+++ b/src/index.ejs
@@ -2,8 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <!-- <meta http-equiv="Content-Security-Policy" content="script-src 'self';"> -->
     <title>weixin-electron</title>
-    <link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_895524_o0qmc79w8o.css">
+    <link rel="stylesheet" type="text/css" href="http://at.alicdn.com/t/font_895524_d3o6vph7jz.css">
     <% if (htmlWebpackPlugin.options.nodeModules) { %>
       <!-- Add `node_modules/` to global paths so `require` works properly in development -->
       <script>
