--- a/src/renderer/assets/css/customized.less
+++ b/src/renderer/assets/css/customized.less
@@ -9,7 +9,13 @@
 .text-right {
     text-align: right;
 }
-
+html, body {
+    width:100%;
+    height:100%;
+    overflow:hidden;
+    margin:0;
+    padding:0;
+}
 body, ul, p {
     margin: 0;
 }
@@ -37,4 +43,7 @@ i {
 }
 input, textarea {
     outline: none;
+}
+.full-height {
+    height: 100%;
 }
