--- a/src/renderer/assets/css/customized.less
+++ b/src/renderer/assets/css/customized.less
@@ -9,6 +9,9 @@
 .text-right {
     text-align: right;
 }
+.text-center {
+    text-align: center;
+}
 html, body {
     width:100%;
     height:100%;
