--- a/src/renderer/assets/css/customized.less
+++ b/src/renderer/assets/css/customized.less
@@ -18,6 +18,7 @@ html, body {
     overflow:hidden;
     margin:0;
     padding:0;
+    font-family: "Microsoft YaHei", "arial"
 }
 body, ul, p {
     margin: 0;
