--- a/src/renderer/assets/css/customized.less
+++ b/src/renderer/assets/css/customized.less
@@ -26,6 +26,9 @@ body, ul, p {
 ul {
     padding: 0;
 }
+li {
+    list-style: none;
+}
 .clearfix {
     zoom: 1;// IE6和IE7浏览器 添加一条zoom:1 触发haslayout。
 }
