--- a/src/index.ejs
+++ b/src/index.ejs
@@ -5,6 +5,7 @@
     <!-- <meta http-equiv="Content-Security-Policy" content="script-src 'self';"> -->
     <title>weixin-electron</title>
     <link rel="stylesheet" type="text/css" href="http://at.alicdn.com/t/font_895524_l0mfgyi1679.css">
+    <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
     <% if (htmlWebpackPlugin.options.nodeModules) { %>
       <!-- Add `node_modules/` to global paths so `require` works properly in development -->
       <script>
