滚动条overflow:auto(内容超出范围才显示)

--- a/src/renderer/assets/css/scrollbar.less
+++ b/src/renderer/assets/css/scrollbar.less
@@ -1,6 +1,6 @@
 .scrolling {
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 ::-webkit-scrollbar {/*定义滚动条高宽及背景 高宽分别对应横竖滚动条的尺寸，背景是滚动条整体部分*/
     width: 6px;
